# HyperCode-V2.4

./: .ci-smoke-check  .env.example  .gitattributes  .gitignore  .gitmessage  .mailmap  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  AGENT_SYNC_NOTES.md  BROSKI_PETS_INTEGRATION_PLAN.md  CLAUDE.md  CLAUDE_CONTEXT.md  CLAUDE_START.md  CONTRIBUTING.md  DEPLOYMENT-CHECKLIST.md  DOCKER_DEVELOPMENT_REPORT.md  DOCKER_PRODUCTS_AND_STATS.md  Dockerfile.agents-test  Dockerfile.agents-test.dockerignore  Dockerfile.builder  Dockerfile.production  HOT_RELOAD_QUICK_START.md  HYPERCODE_TECHNICAL_BREAKTHROUGHS.md  HYPERFOCUS_FEATURES_PLAN.md  IMPROVEMENTS-SUMMARY.md  LICENSE  Makefile  Makefile.observability  OPERATIONS.md  PROJECT_REPORT.md  QUICKSTART.md  RAILWAY_VARS.md  README.md  README_HEALTH_REPORTS.md  RUNBOOK.md  RUNBOOK_BLOCKERS.md  SECURITY.md  SELF-IMPROVING-AGENTS-SETUP.md  (+50 more)
agents/broski-bot/: .dockerignore  DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml  requirements.txt
agents/broski-bot/_archive/: bot_legacy.py  economy_legacy.py  focus_engine.py  index  quick_fix.py
agents/broski-bot/_archive/Python files/: ai_code_analyzer_implementation.py  bot.py  broski_database.py  broski_exceptions.py  broski_main.py  broski_models.py  broski_repositories.py  broski_services.py  broski_settings.py  broski_tests.py  economy.py  mintme_integration_dashboard.py
agents/broski-bot/_git_backup_internal/: config  index  packed-refs
agents/broski-bot/alembic/: env.py
agents/broski-bot/alembic/versions/: aa4cb7aa3ba2_add_transactions_and_achievements.py  bb5dc8bb4cb3_expand_quest_and_achievements.py  d3f8669e746a_initial_schema.py
agents/broski-bot/database/: broski_main.db.backup
agents/broski-bot/docs/: BROSKI_HYPERCODE_INTEGRATION_REPORT.md  BROski Hyperfocus Spec.md  BROski Token Analysis Summary.md  BROski_Bot_Qwen_3.5_Integration_Feasibility_Analysis.md  FRONTEND_INTEGRATION.md  MERGE_READINESS_REPORT.md  MIGRATION_REPORT.md  QUEST_STATE_GUIDE.md  RELEASE_NOTES_v1.0.0.md  SPRINT_3_REPORT.md  broski_docker.txt  broski_migration_guide (1).txt  broski_readme.txt  broski_refactor_plan.txt  broski_token_analysis.txt  community_system_architecture.txt  comprehensive_implementation_guide.txt  🎯 BROski-Bot Implementation Roadmap.md  🚀 ENTERPRISE PRODUCTION ROADMAP COMPLETE, BROSKI!
agents/broski-bot/scripts/: deploy_legacy.sh  git_deploy.ps1
agents/broski-bot/src/: bot.py  main.py
agents/broski-bot/src/agents/: classifier.py
agents/broski-bot/src/api/: main.py
agents/broski-bot/src/cogs/: admin.py  ai_relay.py  briefing.py  community.py  course_stats.py  economy.py  focus.py  health_check.py  hypercode_sync.py  life_engine.py  mystery_box.py  ops_alerts.py  pets.py  profile.py  profile_system.py  quest_orchestrator.py  quest_system.py  server_builder.py  shop_system.py  slash_ask.py
agents/broski-bot/src/config/: logging.py  settings.py
agents/broski-bot/src/core/: database.py  quest_engine.py  schemas.py
agents/broski-bot/src/models/: __init__.py  economy.py  economy_transaction.py  focus_session.py  user.py
agents/broski-bot/src/repositories/: __init__.py  achievement.py  economy.py  quest.py
agents/broski-bot/src/services/: __init__.py  achievement.py  (+3 more)
agents/broski-bot/tests/: conftest.py  test_enterprise.py
docs/notes/: 1 hoy.md  Activating the Translator Agent Test 01.md  Add GITHUB Sponsors Tab to Dashboard.md  Agents help build project.md  All Systems Go  Hyper Station + BROski Terminal.md  Alpha team.md  Analyze the Request.md  BROski  System Health Check Report (HyperCode V2.0).md  Big free AI + agents juice.md  COGNITIVE_UPLINK_ANALYSIS.md  COMPREHENSIVE_HEALTH_REPORT_V3.md  CRITICAL FIXES COMPLETED.md  Critical Fixes — Do These First.md  DIRECTIVE BRING THE VISUALIZER ONLINE.md  Dockerfile  Goal for the agents.md  HYPERCODE V2.0 IS PRODUCTION-READY.md  HYPERCODE V2.0 — STRATEGIC MASTER PLAN & ROADMAP.md  HYPERFLOW-EDITOR.md  Healer Watchdog.md  Hey, I’m Lyndz (WelshDog) 🐶😎.md  Hyper Agents Crew MCP.md  HyperAIFS (HyperCode AI File System).md  HyperAIFS System READY TO USE.md  HyperCode V2.0 — BROski$ Token System Build Brief.md  HyperCode V2.0 — Comprehensive Neurodivergent IDE Audit.md  HyperCode V2.0 — Full Project Audit & Build Phase Plan.md  HyperCode V2.0 — Hyper Station Status Assessment.md  HyperCode V2.0 — REAL Full Check.md  HyperCode V2.1 Upgrade Docker Desktop 4.63.0 AI Beast Mode 🦅.md  HyperCode — Full Stack Observability Dashboard.md  HyperCode-Quantum-Crew-Briefing.docx  HyperCode_Health_Check_Report_2026-02-28.md  HyperCode_V2_Audit_and_Build_Plan.md  HyperStation Playtest Report.md  HyperStation-v0.12-WhatsNew.md  IMPLEMENTATION_SUMMARY.md  INITIALIZE PROTOCOL THE PULSE AGENT.md  MASSIVE W, BRO! THE SWARM IS ALIVE.md  MCP_ARCHITECTURE.md  (+63 more)
(+1413 files in other folders)
