[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperaifs"
version = "0.1.0"
description = "HyperCode AI File System - Semantic, AI-driven file management for neurodivergent workflows and agent automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "HyperCode Team"}]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg[binary]>=3.17.0",
    "redis>=5.0.0",
    "qdrant-client>=2.7.0",
    "strawberry-graphql[fastapi]>=0.216.0",
    "openai>=1.3.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "python-slugify>=8.0.1",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.31.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
]

[project.entry-points."hyperaifs.plugins"]
# Plugin examples (to be populated)

[tool.setuptools.packages.find]
where = ["packages"]
include = ["hyperaifs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
addopts = "--cov=packages --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
